# ml_battle_snake

./: Cargo.toml  README.md  Rocket.toml
src/: lib.rs  logic.rs  main.rs  neural_network.rs  utils.rs
src/ml_snake/: logic.rs  mod.rs
src/simulation/: constants.rs  game.rs  mod.rs  simulation.rs
