[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "ml_battle_snake"
version = "1.0.0"
edition = "2021"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"
tokio = { version = "1.35", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }

[features]
default = ["benchmark"]
benchmark = []
debug = []
visualize = []

[[simulation]]
name = "main"
visualize = []