[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "ml_battle_snake"
version = "1.0.0"
edition = "2021"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"
tokio = { version = "1.35", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }
colored = "2.1.0"

[features]
default = ["benchmark", "benchmark_game", "visualize_game"]
benchmark = []
debug = []
visualize_game = []
benchmark_game = []
write_to_file = []
snake_logs = []
turn_logs = []
debug_simulation = []

[[simulation]]
name = "main"
default = ["visualize_game", "benchmark_game"]
visualize_game = true
benchmark_game = true
debug_game = true

[[server]]
name = "main"
